<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pddl_parser</name>
  <version>0.2.4</version>
  
  <description>This package contains a library for parsing PDDL domains and problems. This package contains many source files from universal-pddl-parser from https://github.com/aig-upf/universal-pddl-parser</description>

  <maintainer email="fmrico@gmail.com">Francisco Martin Rico</maintainer>
 
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
