<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plansys2_bringup</name>
  <version>2.0.9</version>
  
  <description>Bringup scripts and configurations for the ROS2 Planning System</description>

  <maintainer email="fmrico@gmail.com">Francisco Martin Rico</maintainer>
 
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_planner</depend>
  <depend>plansys2_executor</depend>
  <depend>plansys2_lifecycle_manager</depend>

  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
